--- a/src/Food.css
+++ b/src/Food.css
@@ -2,4 +2,16 @@
 	margin-top: 24px;
 	display: grid;
 	grid-template-columns: 230px 230px;
+	align-items: baseline;
+}
+
+.form_1 {
+	margin-top: 18px;
+}
+
+.food__input {
+	padding: 6px 16px;
+	min-width: 200px;
+	max-width: 100vw;
+	font-size: 15px;
 }
