--- a/src/Food.css
+++ b/src/Food.css
@@ -7,6 +7,8 @@
 
 .form_1 {
 	margin-top: 18px;
+	justify-content: center;
+	align-items: center;
 }
 
 .food__input {
@@ -14,4 +16,24 @@
 	min-width: 200px;
 	max-width: 100vw;
 	font-size: 15px;
+}
+
+.food__submit {
+	padding: 6px 16px;
+	font-size: 15px;
+	margin-left: 6px;
+	background-color: #02aff0;
+	border: 2px solid #02aff0;
+	border-radius: 4px;
+	color: white;
+}
+.food__submit:hover {
+	padding: 6px 16px;
+	font-size: 15px;
+	margin-left: 6px;
+	background-color: white;
+	border: 2px solid #02aff0;
+	border-radius: 4px;
+	color: #02aff0;
+	cursor: pointer;
 }
